--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 		<li>git status</li>
 		<li>git add добавить новый файл под контроль </li>
 		<li>git commit - am "added new file index.html"</li>
+		<li>git push = отправить все закоммиченные изменения на сервер</li>
+		<li>git pull = gjkexbnm все закоммиченные изменения c сервера</li>
 	</ul>
 </div>
